fix sizing on mobile

--- a/gallery.css
+++ b/gallery.css
@@ -1,7 +1,5 @@
 .row {
   display: flex;
-  margin-left: 10%;
-  margin-right: 10%;
   flex-wrap: wrap;
   padding: 0 4px;
 }
